sfdx_project/force-app/main/default/objects/Account/fields/Account_data_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_data_Source__c</fullName>
    <label>Account Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AccountSource</controllingField>
        <restricted>true</restricted>
        <valueSetName>Account_data_Source</valueSetName>
    </valueSet>
</CustomField>