sfdx_project/force-app/main/default/objects/Account/fields/AcctSeed__X1099_Vendor__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__X1099_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if a 1099 must be issued to this vendor at year end. Includes disbursements made to this vendor on 1099 reports and file export. Change by selecting Update 1099 Info button.</inlineHelpText>
    <label>1099 Vendor</label>
    <type>Checkbox</type>
</CustomField>