sfdx_project/force-app/main/default/objects/Account/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>RollUp-Summary of all related AcctSeed__Billing__c.Balance values.</description>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>