sfdx_project/force-app/main/default/objects/Account/fields/Being_Managed_for_Owner__c.field-meta.xml
<CustomField>
    <fullName>Being_Managed_for_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Being Managed for Owner</label>
    <type>Checkbox</type>
</CustomField>