sfdx_project/force-app/main/default/objects/Account/fields/Catalog_Available__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Catalog Available</label>
    <type>Checkbox</type>
</CustomField>