sfdx_project/force-app/main/default/objects/Account/fields/CLA_Assignment__c.field-meta.xml
<CustomField>
    <fullName>CLA_Assignment__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <label>CLA Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Ben</fullName>
            </value>
            <value>
                <fullName>Grace</fullName>
            </value>
            <value>
                <fullName>Steve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>