sfdx_project/force-app/main/default/objects/Account/fields/Client_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Product_Type__c</fullName>
    <label>Client Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Client_Type</valueSetName>
    </valueSet>
</CustomField>