sfdx_project/force-app/main/default/objects/Account/fields/Client_Projects_Overview__c.field-meta.xml
<CustomField>
    <fullName>Client_Projects_Overview__c</fullName>
    <label>Client Projects Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>