sfdx_project/force-app/main/default/objects/Account/fields/Commercial_Residential__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Residential__c</fullName>
    <label>Commercial - Residential</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
                <default>true</default>
                <label>Residential</label>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>