sfdx_project/force-app/main/default/objects/Account/fields/Content_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Content_Agreement__c</fullName>
    <label>Content Agreement Registration Location</label>
    <length>25</length>
    <type>Text</type>
</CustomField>