sfdx_project/force-app/main/default/objects/Account/fields/Content_Agreement_Account__c.field-meta.xml
<CustomField>
    <fullName>Content_Agreement_Account__c</fullName>
    <label>Content Agreement Account</label>
    <length>250</length>
    <type>Text</type>
</CustomField>