sfdx_project/force-app/main/default/objects/Account/fields/Content_Agreement_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Agreement_Entity_Type__c</fullName>
    <label>Content Agreement Entity Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>