sfdx_project/force-app/main/default/objects/Account/fields/Content_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Content_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>