sfdx_project/force-app/main/default/objects/Account/fields/Content_Agreement_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Content_Agreement_Signed_Date__c</fullName>
    <label>Content Agreement Signed Date</label>
    <type>Date</type>
</CustomField>