sfdx_project/force-app/main/default/objects/Account/fields/Content_Agreement_Signer_ID__c.field-meta.xml
<CustomField>
    <fullName>Content_Agreement_Signer_ID__c</fullName>
    <label>Content Agreement Signer ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>