sfdx_project/force-app/main/default/objects/Account/fields/Content_Agreement_Signer_Name__c.field-meta.xml
<CustomField>
    <fullName>Content_Agreement_Signer_Name__c</fullName>
    <label>Content Agreement Signer Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>