sfdx_project/force-app/main/default/objects/Account/fields/Data_Entry_Notes__c.field-meta.xml
<CustomField>
    <fullName>Data_Entry_Notes__c</fullName>
    <label>Data Entry Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>