sfdx_project/force-app/main/default/objects/Account/fields/DateTest2__c.field-meta.xml
<CustomField>
    <fullName>DateTest2__c</fullName>
    <label>DateTest2</label>
    <type>Date</type>
</CustomField>