sfdx_project/force-app/main/default/objects/Account/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <label>Disqualified Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bad Owner</fullName>
            </value>
            <value>
                <fullName>Too Small</fullName>
            </value>
            <value>
                <fullName>Revenue Low</fullName>
            </value>
            <value>
                <fullName>May Not Be Legitimate</fullName>
            </value>
            <value>
                <fullName>Potential Ethics/Quality Issue</fullName>
            </value>
            <value>
                <fullName>Conflict of Interests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>