sfdx_project/force-app/main/default/objects/Account/fields/Divisions__c.field-meta.xml
<CustomField>
    <fullName>Divisions__c</fullName>
    <label>Divisions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3D Rendering</fullName>
            </value>
            <value>
                <fullName>Appliance</fullName>
            </value>
            <value>
                <fullName>BIM</fullName>
            </value>
            <value>
                <fullName>Cabinetry</fullName>
            </value>
            <value>
                <fullName>Carpet</fullName>
            </value>
            <value>
                <fullName>Countertops</fullName>
            </value>
            <value>
                <fullName>Door Hardware</fullName>
            </value>
            <value>
                <fullName>Doors</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>MEP</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Slab</fullName>
            </value>
            <value>
                <fullName>Tile</fullName>
            </value>
            <value>
                <fullName>Vinyl</fullName>
            </value>
            <value>
                <fullName>Wall Coverings</fullName>
            </value>
            <value>
                <fullName>Wood Floor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>