sfdx_project/force-app/main/default/objects/Account/fields/Divisions_Reference__c.field-meta.xml
<CustomField>
    <fullName>Divisions_Reference__c</fullName>
    <label>Divisions Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>