sfdx_project/force-app/main/default/objects/Account/fields/Divisions_Sold__c.field-meta.xml
<CustomField>
    <fullName>Divisions_Sold__c</fullName>
    <label>Divisions Sold</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appliance</fullName>
            </value>
            <value>
                <fullName>Cabinetry</fullName>
            </value>
            <value>
                <fullName>Carpet</fullName>
            </value>
            <value>
                <fullName>Concrete</fullName>
            </value>
            <value>
                <fullName>Door</fullName>
            </value>
            <value>
                <fullName>Door Hardware</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>Paint</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Slab</fullName>
            </value>
            <value>
                <fullName>Specialty</fullName>
            </value>
            <value>
                <fullName>Stone</fullName>
            </value>
            <value>
                <fullName>Tile</fullName>
            </value>
            <value>
                <fullName>Vinyl</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
            <value>
                <fullName>AV</fullName>
            </value>
            <value>
                <fullName>Carpets</fullName>
                <isActive>false</isActive>
                <label>Carpets</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>