sfdx_project/force-app/main/default/objects/Account/fields/Efficiently_Account__c.field-meta.xml
<CustomField>
    <fullName>Efficiently_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DO NOT USE/REMOVE/EDIT THIS FOR ANY REASON: THIS IS MEANT TO ID THE MAIN EFFICIENTLY ACCOUNT REGION AGNOSTICALLY. IF THIS ISN&apos;T CLEAR TO YOU, DO NOT MAKE ANY CHANGES AT ALL AND TALK TO BENJAMIN/ADMIN.</description>
    <label>Efficiently Account</label>
    <type>Checkbox</type>
</CustomField>