sfdx_project/force-app/main/default/objects/Account/fields/ERP_POS_Software__c.field-meta.xml
<CustomField>
    <fullName>ERP_POS_Software__c</fullName>
    <label>ERP - POS Software</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quickbooks</fullName>
            </value>
            <value>
                <fullName>RFMS</fullName>
            </value>
            <value>
                <fullName>Compufloor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>