sfdx_project/force-app/main/default/objects/Account/fields/Geo_Region__c.field-meta.xml
<CustomField>
    <fullName>Geo_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Geo Region</label>
    <referenceTo>Geo_Region__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>