sfdx_project/force-app/main/default/objects/Account/fields/Has_Activity__c.field-meta.xml
<CustomField>
    <fullName>Has_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Activity</label>
    <type>Checkbox</type>
</CustomField>