sfdx_project/force-app/main/default/objects/Account/fields/Has_Task__c.field-meta.xml
<CustomField>
    <fullName>Has_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Task</label>
    <type>Checkbox</type>
</CustomField>