sfdx_project/force-app/main/default/objects/Account/fields/Hiring_Resource_Rating__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Resource_Rating__c</fullName>
    <label>Hiring Resource Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Poor</fullName>
            </value>
            <value>
                <fullName>2 - Average</fullName>
            </value>
            <value>
                <fullName>3 - Good</fullName>
            </value>
            <value>
                <fullName>4 - Excellent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>