sfdx_project/force-app/main/default/objects/Account/fields/Hiring_Resource_Status__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Resource_Status__c</fullName>
    <label>Hiring Resource Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Details</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>