sfdx_project/force-app/main/default/objects/Account/fields/HR_Nees__c.field-meta.xml
<CustomField>
    <fullName>HR_Nees__c</fullName>
    <inlineHelpText>Select any Departments that the Account is having trouble with and would be interested in looking at staffing support.</inlineHelpText>
    <label>HR Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architectural</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Sales Support</fullName>
            </value>
            <value>
                <fullName>Purchasing and Logistics Support</fullName>
            </value>
            <value>
                <fullName>Cabinetry Drafting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>