sfdx_project/force-app/main/default/objects/Account/fields/Intro_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Intro_Recipient__c</fullName>
    <label>Intro Recipient</label>
    <length>25</length>
    <type>Text</type>
</CustomField>