sfdx_project/force-app/main/default/objects/Account/fields/Is_Architect_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Architect_Account__c</fullName>
    <formula>INCLUDES(Stakeholder_Type__c, &quot;Architect&quot;)</formula>
    <label>Is Architect Account</label>
    <type>Checkbox</type>
</CustomField>