sfdx_project/force-app/main/default/objects/Account/fields/Is_Developer_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Developer_Account__c</fullName>
    <formula>INCLUDES(Stakeholder_Type__c, &quot;Developer&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Developer Account</label>
    <type>Checkbox</type>
</CustomField>