sfdx_project/force-app/main/default/objects/Account/fields/Is_Engineering_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Engineering_Account__c</fullName>
    <formula>INCLUDES(Stakeholder_Type__c, &quot;Engineering&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Engineering Account</label>
    <type>Checkbox</type>
</CustomField>