sfdx_project/force-app/main/default/objects/Account/fields/Is_Home_Owner_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Home_Owner_Account__c</fullName>
    <formula>INCLUDES(Stakeholder_Type__c, &quot;Home Owner&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Home Owner Account</label>
    <type>Checkbox</type>
</CustomField>