sfdx_project/force-app/main/default/objects/Account/fields/Is_Pre_construction_Estimating_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Pre_construction_Estimating_Account__c</fullName>
    <formula>INCLUDES(Stakeholder_Type__c, &quot;Pre-construction Estimating&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Pre-construction Estimating Account</label>
    <type>Checkbox</type>
</CustomField>