sfdx_project/force-app/main/default/objects/Account/fields/Is_Sales_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Sales_Person_Account__c</fullName>
    <formula>INCLUDES(Stakeholder_Type__c, &quot;Sales Person&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Sales Person Account</label>
    <type>Checkbox</type>
</CustomField>