sfdx_project/force-app/main/default/objects/Account/fields/Is_Showroom_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Showroom_Account__c</fullName>
    <formula>INCLUDES(Stakeholder_Type__c, &quot;Showroom&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Showroom Account</label>
    <type>Checkbox</type>
</CustomField>