sfdx_project/force-app/main/default/objects/Account/fields/Is_Structural_Engineer_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Structural_Engineer_Account__c</fullName>
    <formula>INCLUDES(Stakeholder_Type__c, &quot;Structural Engineer&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Structural Engineer Account</label>
    <type>Checkbox</type>
</CustomField>