sfdx_project/force-app/main/default/objects/Account/fields/Is_Sub_Contractor_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Sub_Contractor_Account__c</fullName>
    <formula>INCLUDES(Stakeholder_Type__c, &quot;Sub Contractor&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Sub Contractor Account</label>
    <type>Checkbox</type>
</CustomField>