sfdx_project/force-app/main/default/objects/Account/fields/Is_Supplier_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Supplier_Account__c</fullName>
    <formula>INCLUDES(Stakeholder_Type__c, &quot;Supplier&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Supplier Account</label>
    <type>Checkbox</type>
</CustomField>