sfdx_project/force-app/main/default/objects/Account/fields/Measuring_Software__c.field-meta.xml
<CustomField>
    <fullName>Measuring_Software__c</fullName>
    <label>Measuring Software</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RFMS</fullName>
            </value>
            <value>
                <fullName>Measure Square</fullName>
            </value>
            <value>
                <fullName>Stack</fullName>
            </value>
            <value>
                <fullName>E Takeoff</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>