sfdx_project/force-app/main/default/objects/Account/fields/MSA_Contact__c.field-meta.xml
<CustomField>
    <fullName>MSA_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSA Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (MSA Contact)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>