sfdx_project/force-app/main/default/objects/Account/fields/MSA_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>MSA_Contact_ID__c</fullName>
    <formula>MSA_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSA Contact ID</label>
    <type>Text</type>
</CustomField>