sfdx_project/force-app/main/default/objects/Account/fields/MSA_sent_to_sign__c.field-meta.xml
<CustomField>
    <fullName>MSA_sent_to_sign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSA sent to sign</label>
    <type>Checkbox</type>
</CustomField>