sfdx_project/force-app/main/default/objects/Account/fields/MSA_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_Sign_Date__c</fullName>
    <label>MSA Sign Date</label>
    <type>DateTime</type>
</CustomField>