sfdx_project/force-app/main/default/objects/Account/fields/Number_of_Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sales_Team__c</fullName>
    <label>Number of Sales Team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>