sfdx_project/force-app/main/default/objects/Account/fields/Opt_Out_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt-Out Marketing</label>
    <type>Checkbox</type>
</CustomField>