sfdx_project/force-app/main/default/objects/Account/fields/Product_Marketing_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Product_Marketing_Opt_in__c</fullName>
    <label>Product Marketing Opt in</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Staffing</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>