sfdx_project/force-app/main/default/objects/Account/fields/Prospect_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Account_Status__c</fullName>
    <label>Prospect Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Data Revision</fullName>
            </value>
            <value>
                <fullName>Details</fullName>
            </value>
            <value>
                <fullName>Reaching Out</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>RPC - Contacted</fullName>
            </value>
            <value>
                <fullName>Moved to opportunity</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Maybe Later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>