sfdx_project/force-app/main/default/objects/Account/fields/Record_Type_Reference__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Reference__c</fullName>
    <label>Record Type Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>