sfdx_project/force-app/main/default/objects/Account/fields/Research_notes__c.field-meta.xml
<CustomField>
    <fullName>Research_notes__c</fullName>
    <label>Sales Reserch notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>