sfdx_project/force-app/main/default/objects/Account/fields/Research_Type__c.field-meta.xml
<CustomField>
    <fullName>Research_Type__c</fullName>
    <label>Research Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>BIM</fullName>
            </value>
            <value>
                <fullName>Civil Engineering</fullName>
            </value>
            <value>
                <fullName>Flooring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>