sfdx_project/force-app/main/default/objects/Account/fields/Shipping_is_same_as_billing__c.field-meta.xml
<CustomField>
    <fullName>Shipping_is_same_as_billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping is same as billing</label>
    <type>Checkbox</type>
</CustomField>